--- a/form.html
+++ b/form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Form</title>
 </head>
 <body>
     <div>
@@ -11,7 +12,7 @@
             <label>Name</label><input name="name" type="text" value=""/>
             <label>Address</label><input name="address" type="text" value=""/>
 
-            <input type="submit" value="submit"/>
+            <input type="submit" value="Submit">
         </form>
     </div>
 </body>
